DuPont DevSB/src/objects/Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>Description_rtf__c</fullName>
        <description>Rich text long description</description>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <description>This field get populated via the fHeirarchy field.</description>
        <label>Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsSelectable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Can Select. Add as a selectable node in the treeview and autocomplete control.</description>
        <label>IsSelectable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OwningOrg__c</fullName>
        <description>just at root level</description>
        <label>Owning Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>ABS-BioFuels</fullName>
                </value>
                <value>
                    <fullName>ABS-Cerenol</fullName>
                </value>
                <value>
                    <fullName>ABS-Sorona</fullName>
                </value>
                <value>
                    <fullName>ABS-Tate &amp; Lyle</fullName>
                </value>
                <value>
                    <fullName>AGCP</fullName>
                </value>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>AGNH</fullName>
                </value>
                <value>
                    <fullName>AGNH-Biotech</fullName>
                </value>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Carpet Backing</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Fire Safety</fullName>
                </value>
                <value>
                    <fullName>BI-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>Corp CMS</fullName>
                </value>
                <value>
                    <fullName>CORP-Core</fullName>
                </value>
                <value>
                    <fullName>CORP-Corporate Plans</fullName>
                </value>
                <value>
                    <fullName>CORS</fullName>
                </value>
                <value>
                    <fullName>CORS-Aviation</fullName>
                </value>
                <value>
                    <fullName>CORS-Corp Remediation</fullName>
                </value>
                <value>
                    <fullName>CORS-Government Affairs</fullName>
                </value>
                <value>
                    <fullName>CORS-Investor Relations</fullName>
                </value>
                <value>
                    <fullName>CORS-IT-DSAP</fullName>
                </value>
                <value>
                    <fullName>CORS-Public Affairs</fullName>
                </value>
                <value>
                    <fullName>CR&amp;D</fullName>
                </value>
                <value>
                    <fullName>DA-Nano LLC</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent</description>
        <label>Parent Segment</label>
        <referenceTo>Segmentation__c</referenceTo>
        <relationshipLabel>Segmentation</relationshipLabel>
        <relationshipName>Segmentation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Root Segment</description>
        <inlineHelpText>Lookup to Root Segment</inlineHelpText>
        <label>Root</label>
        <referenceTo>Segmentation__c</referenceTo>
        <relationshipLabel>Related Segmentation</relationshipLabel>
        <relationshipName>Root</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIC__c</fullName>
        <description>SIC Code</description>
        <label>SIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentId__c</fullName>
        <description>Short Name of Segment</description>
        <externalId>true</externalId>
        <inlineHelpText>Short Name of Segment</inlineHelpText>
        <label>Segment Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentL1__c</fullName>
        <description>This gets copied from the fSegmentL1__c formula field on change.</description>
        <label>Segment L1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentL2__c</fullName>
        <description>This gets copied from the fSegmentL2__c formula field on change.</description>
        <label>Segment L2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentL3__c</fullName>
        <description>This gets copied from the fSegmentL3__c formula field on change.</description>
        <label>Segment L3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <description>TextArea(255) description</description>
        <inlineHelpText>TextArea(255) description</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StdHierarchy__c</fullName>
        <description>This field get populated via the fStdHeirarchy__c field.</description>
        <label>Std Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StdSIC__c</fullName>
        <description>DupontOne SIC</description>
        <label>Std SIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StdSegmentL1__c</fullName>
        <description>This gets copied from the fStdSegmentL1__c formula field on change.</description>
        <label>Std Segment L1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StdSegmentL2__c</fullName>
        <description>This gets copied from the fStdSegmentL2__c formula field on change.</description>
        <label>Std Segment L2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StdSegmentL3__c</fullName>
        <description>This gets copied from the fStdSegmentL3__c formula field on change.</description>
        <label>Std Segment L3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of segmentation,  visible at root level (0)</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <description>Unique Name used to Identify a root node.</description>
        <inlineHelpText>Unique Name used to Identify a root node.</inlineHelpText>
        <label>Unique Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fLevel__c</fullName>
        <description>Max out at Level 3.</description>
        <formula>IF( Parent__c==&quot;&quot;,0,
IF(Parent__r.Parent__c==&quot;&quot;,1,
IF(Parent__r.Parent__r.Parent__c==&quot;&quot;,2,
IF(Parent__r.Parent__r.Parent__r.Parent__c==&quot;&quot;,3
,4
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level (fx)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fOwningOrg__c</fullName>
        <description>inherited from root</description>
        <formula>BLANKVALUE(TEXT(OwningOrg__c), 
BLANKVALUE(TEXT(Parent__r.OwningOrg__c), 
BLANKVALUE(TEXT(Parent__r.Parent__r.OwningOrg__c),
TEXT(Parent__r.Parent__r.Parent__r.OwningOrg__c)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment Owning Org (fx)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fType__c</fullName>
        <description>Inherited Type (max 5 levels)</description>
        <formula>BLANKVALUE(TEXT(Type__c), 
BLANKVALUE(TEXT(Parent__r.Type__c), 
BLANKVALUE(TEXT(Parent__r.Parent__r.Type__c),
TEXT(Parent__r.Parent__r.Parent__r.Type__c)
)))</formula>
        <inlineHelpText>Inherited Type</inlineHelpText>
        <label>Segment Type (fx)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primarySegment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>&apos;One DuPont&apos; equivalent Segment,  Required for cross SBU reporting,  incentive for user base is to inherent specified standard such as SIC, NAICS, etc..</description>
        <inlineHelpText>The &apos;One DuPont&apos; equivalent Segment</inlineHelpText>
        <label>Std Segment</label>
        <referenceTo>Segmentation__c</referenceTo>
        <relationshipLabel>BU-Free Segments</relationshipLabel>
        <relationshipName>Segmentation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Segmentation</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>OwningOrg__c</columns>
        <columns>fType__c</columns>
        <columns>fLevel__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Segment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentation</pluralLabel>
    <recordTypes>
        <fullName>RootSegment</fullName>
        <active>false</active>
        <description>Root Segment contains more required fields which the child can inherit</description>
        <label>Root Segment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Segment</fullName>
        <active>false</active>
        <label>Segment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>